overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -60,11 +60,12 @@
   /* Base Styles */
   * {
     @apply border-border;
+
   
   }
 
   body {
     @apply bg-background text-foreground;
-    overflow-x: hidden;
-    width:100%;
+   @apply w-screen overflow-x-hidden;
+ 
   }
